--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Apps/DataMonitor.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Apps/DataMonitor.xaml
@@ -1,18 +1,24 @@
 ﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Engine.TCMS.Turkmenistan.Apps"
-        xmlns:dxprg="http://schemas.devexpress.com/winfx/2008/xaml/propertygrid"
-        xmlns:viewModels="clr-namespace:Engine.TCMS.Turkmenistan.ViewModels"
-        x:Class="Engine.TCMS.Turkmenistan.Apps.DataMonitor"
+    x:Class="Engine.TCMS.Turkmenistan.Apps.DataMonitor"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:dxprg="http://schemas.devexpress.com/winfx/2008/xaml/propertygrid"
+    xmlns:local="clr-namespace:Engine.TCMS.Turkmenistan.Apps"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModels="clr-namespace:Engine.TCMS.Turkmenistan.ViewModels"
+    Title="DataMonitor"
+    Width="300"
+    Height="300"
     d:DataContext="{d:DesignInstance viewModels:DoMainViewModel}"
-        mc:Ignorable="d"
-        Title="DataMonitor" Height="300" Width="300">
+    mc:Ignorable="d">
     <Grid>
 
-        <dxprg:PropertyGridControl AllowExpanding="ForceIfNoTypeConverter" AllowInstanceInitializer="False"  SelectedObject="{Binding }" ShowCategories="False" />
+        <dxprg:PropertyGridControl
+            AllowExpanding="ForceIfNoTypeConverter"
+            AllowInstanceInitializer="False"
+            SelectedObject="{Binding}"
+            ShowCategories="False" />
 
     </Grid>
 </Window>
