--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -3,9 +3,18 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
+    <SolidColorBrush x:Key="ContentBackgroundBrush" Color="Black" />
 
-    <system:Double x:Key="Double12">12</system:Double>
+    <SolidColorBrush x:Key="ShellBackgroundBrush" Color="Black" />
 
-    <SolidColorBrush x:Key="WhiteBrush" Color="White" />
+    <SolidColorBrush x:Key="ForegroundWhiteBrush" Color="White" />
+
+    <SolidColorBrush x:Key="HarwareButtonWhiteBrush" Color="White" />
+
+    <SolidColorBrush x:Key="HarwareButtonRedBrush" Color="Red" />
+
+    <SolidColorBrush x:Key="HarwareButtonPressedBackground" Color="Black" />
+
+    <system:Double x:Key="Double20">20</system:Double>
 
 </ResourceDictionary>
