--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/TurkmenistanResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/TurkmenistanResource.xaml
@@ -5,5 +5,7 @@
         <ResourceDictionary Source="Base/TurkmenistanBaseResource.xaml" />
         <ResourceDictionary Source="Styles/TurkmenistanButtonStyle.xaml" />
         <ResourceDictionary Source="Styles/TurkmenistanTextStyles.xaml" />
+        <ResourceDictionary Source="Styles/TurkmenistanItemControlStyle.xaml"></ResourceDictionary>
+        <ResourceDictionary Source="Styles/TurkmenistanProgressBarStyle.xaml"></ResourceDictionary>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
