--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -3,18 +3,31 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
-    <SolidColorBrush x:Key="ContentBackgroundBrush" Color="Black" />
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../Converters/TurkmenistanConverter.xaml"></ResourceDictionary>
+    </ResourceDictionary.MergedDictionaries>
+
+    <SolidColorBrush x:Key="ContentBackgroundBrush" Color="#FF7F7E81" />
 
     <SolidColorBrush x:Key="ShellBackgroundBrush" Color="Black" />
 
     <SolidColorBrush x:Key="ForegroundWhiteBrush" Color="White" />
 
+    <SolidColorBrush x:Key="MainTextBrushOne" Color="PapayaWhip"></SolidColorBrush>
+
+    <SolidColorBrush x:Key="ContentDeepSkyBlueBrush" Color="DeepSkyBlue"></SolidColorBrush>
+
     <SolidColorBrush x:Key="HarwareButtonWhiteBrush" Color="White" />
+
 
     <SolidColorBrush x:Key="HarwareButtonRedBrush" Color="Red" />
 
     <SolidColorBrush x:Key="HarwareButtonPressedBackground" Color="Black" />
 
     <system:Double x:Key="Double20">20</system:Double>
+
+    <system:Double x:Key="Double18">18</system:Double>
+
+    <system:Double x:Key="Double16">16</system:Double>
 
 </ResourceDictionary>
