--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
@@ -1,10 +1,14 @@
 ﻿<UserControl
+    
     x:Class="Engine.TCMS.Turkmenistan.View.Contents.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Engine.TCMS.Turkmenistan.View.Contents"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
+    xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
+    Background="Black"
     d:DesignHeight="550"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -34,18 +38,51 @@
                     Text="{DynamicResource Date}" />
                 <Button
                     Grid.Column="1"
-                    Content="2017/03/02"
+                    Content="{Binding Model.MainModel.Date, Mode=OneWay}"
                     Style="{StaticResource MainViewDateStyle}" />
+
                 <TextBlock
                     Grid.Column="2"
                     Style="{StaticResource MainDateTextStyle}"
                     Text="{DynamicResource Time}" />
                 <Button
                     Grid.Column="3"
-                    Content="12:33:49"
+                    Content="{Binding Model.MainModel.Time, Mode=OneWay}"
                     Style="{StaticResource MainViewDateStyle}" />
                 <TextBlock Text="{DynamicResource WorkState}" Grid.Column="4" Style="{StaticResource MainDateTextStyle}"></TextBlock>
                 <Button Grid.Column="5"  HorizontalContentAlignment="Left" Padding="15,0,0,0" Style="{StaticResource MainViewDateStyle}" Content="空载"></Button>
+            </Grid>
+            <Grid Grid.Row="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition></ColumnDefinition>
+                </Grid.ColumnDefinitions>
+                <Border  Grid.Column="1" Style="{StaticResource MainViewBorderStyle}">
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"></ColumnDefinition>
+                            <ColumnDefinition Width="10*"></ColumnDefinition>
+                            <ColumnDefinition Width="2*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <ProgressBar Grid.Column="0" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.OilPressure}"></ProgressBar>
+                        <ItemsControl Grid.Column="1" Style="{StaticResource MainDistanceScalStyle}" ItemsSource="{Binding Source={x:Static model:TargitDistanceScale1200.Instance},Path=Items}"></ItemsControl>
+                        <ProgressBar Grid.Column="2" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.FuelPressure}"></ProgressBar>
+                    </Grid>
+                </Border>
+                <Border  Grid.Column="2" Style="{StaticResource MainViewBorderStyle}" >
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="2*"></ColumnDefinition>
+                            <ColumnDefinition Width="10*"></ColumnDefinition>
+                            <ColumnDefinition Width="2*"></ColumnDefinition>
+                        </Grid.ColumnDefinitions>
+                        <ProgressBar Grid.Column="0" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.CoolingWaterTemperature}"></ProgressBar>
+                        <ItemsControl Grid.Column="1" Style="{StaticResource MainDistanceScalStyle}" ItemsSource="{Binding Source={x:Static model:TargitDistanceScale120.Instance},Path=Items}"></ItemsControl>
+                        <ProgressBar Grid.Column="2" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.OILTEngineOilTemperature}"></ProgressBar>
+                    </Grid>
+                </Border>
+
             </Grid>
         </Grid>
     </Grid>
