1. Add Effect Border.

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -16,8 +16,12 @@
     <SolidColorBrush x:Key="MainTextBrushOne" Color="PapayaWhip"></SolidColorBrush>
 
     <SolidColorBrush x:Key="ContentDeepSkyBlueBrush" Color="DeepSkyBlue"></SolidColorBrush>
+    
+    <SolidColorBrush x:Key="MainViewProgreeBarBackground" Color="CornflowerBlue"></SolidColorBrush>
 
     <SolidColorBrush x:Key="HarwareButtonWhiteBrush" Color="White" />
+    
+    <SolidColorBrush x:Key="BlackBrush" Color="Black"></SolidColorBrush>
 
 
     <SolidColorBrush x:Key="HarwareButtonRedBrush" Color="Red" />
