--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -7,6 +7,8 @@
     <system:String x:Key="Date">日期</system:String>
     <system:String x:Key="Time">时间</system:String>
     <system:String x:Key="WorkState">工况</system:String>
+    <system:String x:Key="EngineSpeed">机车速度</system:String>
+    <system:String x:Key="DieselEngineSpeed">柴油机转速</system:String>
 
 
 
