--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanProgressBarStyle.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanProgressBarStyle.xaml
@@ -1,28 +1,31 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    >
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml"></ResourceDictionary>
+        <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <Style x:Key="ProgressBarOrdinaryStyle" TargetType="ProgressBar">
         <Setter Property="Orientation" Value="Vertical" />
-        <Setter Property="Background" Value="Transparent" />
-        <Setter Property="BorderThickness" Value="1"></Setter>
-        <Setter Property="BorderBrush" Value="{StaticResource MainTextBrushOne}"></Setter>
+        <Setter Property="Background" Value="{StaticResource BlackBrush}" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderBrush" Value="{StaticResource MainTextBrushOne}" />
         <Setter Property="Foreground" Value="{StaticResource ContentDeepSkyBlueBrush}" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ProgressBar">
-                    <Border Name="border"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}">
+                    <Border
+                        Name="border"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
                         <Grid>
                             <Rectangle Name="PART_Track" Fill="{TemplateBinding Background}" />
-                            <Rectangle Name="PART_Indicator"
-                                       HorizontalAlignment="Left"
-                                       Fill="{TemplateBinding Foreground}" />
+                            <Rectangle
+                                Name="PART_Indicator"
+                                HorizontalAlignment="Left"
+                                Fill="{TemplateBinding Foreground}" />
                         </Grid>
                     </Border>
 
@@ -44,11 +47,12 @@
                                             <EventTrigger RoutedEvent="Loaded">
                                                 <BeginStoryboard>
                                                     <Storyboard>
-                                                        <ColorAnimation AutoReverse="True"
-                                                                        Duration="0:0:0.5"
-                                                                        RepeatBehavior="Forever"
-                                                                        Storyboard.TargetProperty="Fill.Color"
-                                                                        To="Transparent" />
+                                                        <ColorAnimation
+                                                            AutoReverse="True"
+                                                            RepeatBehavior="Forever"
+                                                            Storyboard.TargetProperty="Fill.Color"
+                                                            To="Transparent"
+                                                            Duration="0:0:0.5" />
                                                     </Storyboard>
                                                 </BeginStoryboard>
                                             </EventTrigger>
@@ -63,10 +67,17 @@
         </Setter>
     </Style>
 
-    <Style TargetType="Border" x:Key="MainViewBorderStyle">
-        <Setter Property="BorderBrush" Value="{StaticResource ContentBackgroundBrush}"></Setter>
-        <Setter Property="BorderThickness" Value="5"></Setter>
-        <Setter Property="Margin" Value="2"></Setter>
+    <Style x:Key="MainViewBorderStyle" TargetType="common:EffectBorder">
+        <Setter Property="LineWidth" Value="5" />
+        <Setter Property="Line1Fill" Value="#807E86" />
+        <Setter Property="Line2Fill" Value="#A8A3A8" />
+        <Setter Property="Margin" Value="10,2" />
     </Style>
-
+    <Style x:Key="MainViewBorderStyle2" TargetType="common:EffectBorder">
+        <Setter Property="LineWidth" Value="5" />
+        <Setter Property="Line1Fill" Value="#807E86" />
+        <Setter Property="Line2Fill" Value="#A8A3A8" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+        <Setter Property="Margin" Value="2,3" />
+    </Style>
 </ResourceDictionary>
