--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
@@ -5,11 +5,30 @@
         <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="MainDateTextStyle" TargetType="TextBlock">
+    <Style x:Key="MainTextStyle1" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
         <Setter Property="FontSize" Value="{StaticResource Double20}" />
     </Style>
-
+    <Style x:Key="MainTextStyle2" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+    </Style>
+    <Style x:Key="MainTextStyle3" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+    </Style>
+    <Style x:Key="MainTextStyle4" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="10,0,0,0"></Setter>
+        <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double16}" />
+    </Style>
 </ResourceDictionary>
