--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
@@ -1,14 +1,13 @@
 ﻿<UserControl
-    
     x:Class="Engine.TCMS.Turkmenistan.View.Contents.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:common="clr-namespace:Engine.TCMS.Turkmenistan.View.Common"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
     xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
-    Background="Black"
+    xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
+    d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     d:DesignHeight="550"
     d:DesignWidth="800"
     mc:Ignorable="d">
@@ -34,56 +33,191 @@
                 </Grid.ColumnDefinitions>
                 <TextBlock
                     Grid.Column="0"
-                    Style="{StaticResource MainDateTextStyle}"
+                    Style="{StaticResource MainTextStyle1}"
                     Text="{DynamicResource Date}" />
-                <Button
+                <common:EffectBorder   Grid.Column="1" Style="{StaticResource MainViewBorderStyle2}">
+                    <common:EffectBorder.EffectContent>
+                        <TextBlock Text="1111" Foreground="Wheat"></TextBlock>
+                    </common:EffectBorder.EffectContent>
+                </common:EffectBorder>
+
+                <!--<Button
                     Grid.Column="1"
                     Content="{Binding Model.MainModel.Date, Mode=OneWay}"
-                    Style="{StaticResource MainViewDateStyle}" />
+                    Style="{StaticResource MainViewDateStyle}" />-->
 
                 <TextBlock
                     Grid.Column="2"
-                    Style="{StaticResource MainDateTextStyle}"
+                    Style="{StaticResource MainTextStyle1}"
                     Text="{DynamicResource Time}" />
                 <Button
                     Grid.Column="3"
                     Content="{Binding Model.MainModel.Time, Mode=OneWay}"
                     Style="{StaticResource MainViewDateStyle}" />
-                <TextBlock Text="{DynamicResource WorkState}" Grid.Column="4" Style="{StaticResource MainDateTextStyle}"></TextBlock>
-                <Button Grid.Column="5"  HorizontalContentAlignment="Left" Padding="15,0,0,0" Style="{StaticResource MainViewDateStyle}" Content="空载"></Button>
+                <TextBlock
+                    Grid.Column="4"
+                    Style="{StaticResource MainTextStyle1}"
+                    Text="{DynamicResource WorkState}" />
+                <Button
+                    Grid.Column="5"
+                    Padding="15,0,0,0"
+                    HorizontalContentAlignment="Left"
+                    Content="{Binding Model.MainModel.WorkModel, Converter={StaticResource EnumDescritionConverter}}"
+                    Style="{StaticResource MainViewDateStyle}" />
             </Grid>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                    <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Border  Grid.Column="1" Style="{StaticResource MainViewBorderStyle}">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"></ColumnDefinition>
-                            <ColumnDefinition Width="10*"></ColumnDefinition>
-                            <ColumnDefinition Width="2*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <ProgressBar Grid.Column="0" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.OilPressure}"></ProgressBar>
-                        <ItemsControl Grid.Column="1" Style="{StaticResource MainDistanceScalStyle}" ItemsSource="{Binding Source={x:Static model:TargitDistanceScale1200.Instance},Path=Items}"></ItemsControl>
-                        <ProgressBar Grid.Column="2" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.FuelPressure}"></ProgressBar>
-                    </Grid>
-                </Border>
-                <Border  Grid.Column="2" Style="{StaticResource MainViewBorderStyle}" >
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="2*"></ColumnDefinition>
-                            <ColumnDefinition Width="10*"></ColumnDefinition>
-                            <ColumnDefinition Width="2*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <ProgressBar Grid.Column="0" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.CoolingWaterTemperature}"></ProgressBar>
-                        <ItemsControl Grid.Column="1" Style="{StaticResource MainDistanceScalStyle}" ItemsSource="{Binding Source={x:Static model:TargitDistanceScale120.Instance},Path=Items}"></ItemsControl>
-                        <ProgressBar Grid.Column="2" Style="{StaticResource ProgressBarOrdinaryStyle}" Maximum="120" Value="{Binding Model.MainModel.OILTEngineOilTemperature}"></ProgressBar>
-                    </Grid>
-                </Border>
+                <common:EffectBorder Grid.Column="0" Style="{StaticResource MainViewBorderStyle}">
+                    <common:EffectBorder.EffectContent>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="10*" />
+                                <ColumnDefinition Width="2*" />
+                            </Grid.ColumnDefinitions>
+                            <ProgressBar
+                                Grid.Column="0"
+                                Maximum="1120"
+                                Style="{StaticResource ProgressBarOrdinaryStyle}"
+                                Value="{Binding Model.MainModel.MasterVoltage}" />
+                            <ItemsControl
+                                Grid.Column="1"
+                                ItemsSource="{Binding Source={x:Static model:TargitDistanceScale112.Instance}, Path=Items}"
+                                Style="{StaticResource MainDistanceScalStyle1}" />
+                            <ItemsControl
+                                Grid.Column="1"
+                                ItemsSource="{Binding Source={x:Static model:TargitDistanceScale9.Instance}, Path=Items}"
+                                Style="{StaticResource MainDistanceScalStyle2}" />
+                            <ProgressBar
+                                Grid.Column="2"
+                                Maximum="900"
+                                Style="{StaticResource ProgressBarOrdinaryStyle}"
+                                Value="{Binding Model.MainModel.MasterCurrent}" />
+                        </Grid>
+                    </common:EffectBorder.EffectContent>
+                </common:EffectBorder>
+                <common:EffectBorder Grid.Column="1" Style="{StaticResource MainViewBorderStyle}">
+                    <common:EffectBorder.EffectContent>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="10*" />
+                                <ColumnDefinition Width="2*" />
+                            </Grid.ColumnDefinitions>
+                            <ProgressBar
+                                Grid.Column="0"
+                                Maximum="120"
+                                Style="{StaticResource ProgressBarOrdinaryStyle}"
+                                Value="{Binding Model.MainModel.OilPressure}" />
+                            <ItemsControl
+                                Grid.Column="1"
+                                ItemsSource="{Binding Source={x:Static model:TargitDistanceScale1200.Instance}, Path=Items}"
+                                Style="{StaticResource MainDistanceScalStyle}" />
+                            <ProgressBar
+                                Grid.Column="2"
+                                Maximum="120"
+                                Style="{StaticResource ProgressBarOrdinaryStyle}"
+                                Value="{Binding Model.MainModel.FuelPressure}" />
+                        </Grid>
+                    </common:EffectBorder.EffectContent>
+
+                </common:EffectBorder>
+                <common:EffectBorder Grid.Column="2" Style="{StaticResource MainViewBorderStyle}">
+                    <common:EffectBorder.EffectContent>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="2*" />
+                                <ColumnDefinition Width="10*" />
+                                <ColumnDefinition Width="2*" />
+                            </Grid.ColumnDefinitions>
+                            <ProgressBar
+                                Grid.Column="0"
+                                Maximum="120"
+                                Style="{StaticResource ProgressBarOrdinaryStyle}"
+                                Value="{Binding Model.MainModel.CoolingWaterTemperature}" />
+                            <ItemsControl
+                                Grid.Column="1"
+                                ItemsSource="{Binding Source={x:Static model:TargitDistanceScale120.Instance}, Path=Items}"
+                                Style="{StaticResource MainDistanceScalStyle}" />
+                            <ProgressBar
+                                Grid.Column="2"
+                                Maximum="120"
+                                Style="{StaticResource ProgressBarOrdinaryStyle}"
+                                Value="{Binding Model.MainModel.OILTEngineOilTemperature}" />
+                        </Grid>
+                    </common:EffectBorder.EffectContent>
+                </common:EffectBorder>
+
 
             </Grid>
+        </Grid>
+        <Grid Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="70*" />
+                <RowDefinition Height="480*" />
+            </Grid.RowDefinitions>
+            <Grid Grid.Row="0" Margin="2,5">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <TextBlock
+                    Grid.Row="0"
+                    Grid.Column="0"
+                    Style="{StaticResource MainTextStyle2}"
+                    Text="{StaticResource EngineSpeed}" />
+                <TextBlock
+                    Grid.Row="1"
+                    Grid.Column="0"
+                    Style="{StaticResource MainTextStyle2}"
+                    Text="{StaticResource DieselEngineSpeed}" />
+                <Border
+                    Grid.Row="0"
+                    Grid.RowSpan="2"
+                    Grid.Column="1"
+                    Background="{StaticResource MainViewProgreeBarBackground}">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition />
+                            <RowDefinition />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*" />
+                            <ColumnDefinition Width="1*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Style="{StaticResource MainTextStyle3}"
+                            Text="0" />
+                        <TextBlock
+                            Grid.Row="1"
+                            Grid.Column="0"
+                            Style="{StaticResource MainTextStyle3}"
+                            Text="398" />
+                        <TextBlock
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            Style="{StaticResource MainTextStyle4}"
+                            Text="km/h" />
+                        <TextBlock
+                            Grid.Row="1"
+                            Grid.Column="1"
+                            Style="{StaticResource MainTextStyle4}"
+                            Text="r/min" />
+                    </Grid>
+                </Border>
+            </Grid>
+
+
         </Grid>
     </Grid>
 </UserControl>
