--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Shell/ShellWithoutButton.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Shell/ShellWithoutButton.xaml
@@ -8,7 +8,7 @@
     xmlns:regions="http://www.codeplex.com/CompositeWPF"
     d:DesignHeight="600"
     d:DesignWidth="800"
-    Background="{StaticResource ContentBackgroundBrush}"
+    Background="{StaticResource BlackBrush}"
     mc:Ignorable="d">
     <Border regions:RegionManager.RegionName="{x:Static constant:RegionNames.ShellContent}" />
 </UserControl>
