1.修改主界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -4,7 +4,7 @@
     xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <ResourceDictionary.MergedDictionaries>
-        <ResourceDictionary Source="../Converters/TurkmenistanConverter.xaml"></ResourceDictionary>
+        <ResourceDictionary Source="../Converters/TurkmenistanConverter.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <SolidColorBrush x:Key="ContentBackgroundBrush" Color="#FF7F7E81" />
@@ -13,15 +13,17 @@
 
     <SolidColorBrush x:Key="ForegroundWhiteBrush" Color="White" />
 
-    <SolidColorBrush x:Key="MainTextBrushOne" Color="PapayaWhip"></SolidColorBrush>
+    <SolidColorBrush x:Key="ForegroundOrangeBrush" Color="Orange" />
 
-    <SolidColorBrush x:Key="ContentDeepSkyBlueBrush" Color="DeepSkyBlue"></SolidColorBrush>
-    
-    <SolidColorBrush x:Key="MainViewProgreeBarBackground" Color="CornflowerBlue"></SolidColorBrush>
+    <SolidColorBrush x:Key="MainTextBrushOne" Color="PapayaWhip" />
+
+    <SolidColorBrush x:Key="ContentDeepSkyBlueBrush" Color="DeepSkyBlue" />
+
+    <SolidColorBrush x:Key="MainViewProgreeBarBackground" Color="CornflowerBlue" />
 
     <SolidColorBrush x:Key="HarwareButtonWhiteBrush" Color="White" />
-    
-    <SolidColorBrush x:Key="BlackBrush" Color="Black"></SolidColorBrush>
+
+    <SolidColorBrush x:Key="BlackBrush" Color="Black" />
 
 
     <SolidColorBrush x:Key="HarwareButtonRedBrush" Color="Red" />
