--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -9,6 +9,13 @@
     <system:String x:Key="WorkState">工况</system:String>
     <system:String x:Key="EngineSpeed">机车速度</system:String>
     <system:String x:Key="DieselEngineSpeed">柴油机转速</system:String>
+    <system:String x:Key="MasterVoltage" xml:space="preserve">主&#13;电压</system:String>
+    <system:String x:Key="MasterCurrent" xml:space="preserve">主&#13;电源</system:String>
+    <system:String x:Key="OilPressure" xml:space="preserve">滑油&#13;压力</system:String>
+    <system:String x:Key="FuelPressure" xml:space="preserve">燃油&#13;压力</system:String>
+    <system:String x:Key="CoolingWaterTemperature" xml:space="preserve">冷却&#13;水温</system:String>
+    <system:String x:Key="OILTEngineOilTemperature" xml:space="preserve">机油&#13;温度</system:String>
+    <system:String x:Key="FaultInfo" xml:space="preserve">故障&#13;信息</system:String>
 
 
 
