--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanProgressBarStyle.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanProgressBarStyle.xaml
@@ -89,4 +89,11 @@
         <Setter Property="Padding" Value="5" />
         <Setter Property="BorderThickness" Value="3" />
     </Style>
+    <Style x:Key="MainBorderStyle2" TargetType="Border">
+        <Setter Property="Background" Value="{StaticResource MainViewProgreeBarBackground}" />
+        <Setter Property="BorderBrush" Value="#7E8189" />
+        <Setter Property="Margin" Value="2" />
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="BorderThickness" Value="3" />
+    </Style>
 </ResourceDictionary>
