--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
@@ -1,5 +1,4 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="../Base/TurkmenistanBaseResource.xaml" />
@@ -14,22 +13,37 @@
     <Style x:Key="MainTextStyle2" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="15,0,0,0"></Setter>
+        <Setter Property="Margin" Value="15,0,0,0" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
         <Setter Property="FontSize" Value="{StaticResource Double20}" />
     </Style>
     <Style x:Key="MainTextStyle3" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Right" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="FontWeight" Value="Bold"></Setter>
+        <Setter Property="FontWeight" Value="Bold" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
         <Setter Property="FontSize" Value="{StaticResource Double20}" />
     </Style>
     <Style x:Key="MainTextStyle4" TargetType="TextBlock">
         <Setter Property="HorizontalAlignment" Value="Left" />
         <Setter Property="VerticalAlignment" Value="Center" />
-        <Setter Property="Margin" Value="10,0,0,0"></Setter>
+        <Setter Property="Margin" Value="10,0,0,0" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
         <Setter Property="FontSize" Value="{StaticResource Double16}" />
+    </Style>
+    <Style x:Key="MainTextStyle5" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{StaticResource ForegroundWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+    </Style>
+    <Style x:Key="MainTextStyle6" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="TextAlignment" Value="Center" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="2,0" />
+        <Setter Property="Foreground" Value="{StaticResource ForegroundOrangeBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
     </Style>
 </ResourceDictionary>
