--- a/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/Resource/Brushes/BrushResource.xaml
+++ b/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/Resource/Brushes/BrushResource.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <SolidColorBrush x:Key="ItemBackgroudBrush" Color="#BCE3FF" />
+    <SolidColorBrush x:Key="ItemBackgroudBrush" Color="#BFBEC3" />
     <SolidColorBrush x:Key="BackgroundBursh" Color="#FF041122" />
     <SolidColorBrush x:Key="DarkGrayBrush" Color="DarkGray" />
     <SolidColorBrush x:Key="BlackBrush" Color="Black" />
@@ -9,6 +9,6 @@
     <SolidColorBrush x:Key="GreenBrush" Color="#00FF00" />
     <SolidColorBrush x:Key="TransparentBrush" Color="Transparent" />
     <SolidColorBrush x:Key="YellowBrush" Color="Yellow" />
-    <SolidColorBrush x:Key="BackgroundBrush" Color="#001A71" />
+    <SolidColorBrush x:Key="BackgroundBrush" Color="#000032" />
 
 </ResourceDictionary>
