--- a/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/Resource/FontFamilies/FontFamiliesResource.xaml
+++ b/Train/Subway.ShiJiaZhuangLine1/Src/Subway.ShiJiaZhuangLine1.Subsystem/Resource/FontFamilies/FontFamiliesResource.xaml
@@ -1,3 +1,3 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <FontFamily x:Key="CommonFont">宋体</FontFamily>
+    <FontFamily x:Key="CommonFont">华文仿宋</FontFamily>
 </ResourceDictionary>
